<resources>
    <string name="app_name">Lin</string>
    <string name="action_about">关于 Lin</string>
    <string name="main_all_icon">&#xe63f;</string>
    <string name="main_all_text">全部</string>
    <string name="main_recent_icon">&#xe60e;</string>
    <string name="main_recent_text">最新</string>
    <string name="main_recommend_icon">&#xe60c;</string>
    <string name="main_recommend_text">大牛</string>
    <string name="title_activity_actionbarcontrolgridview">GridView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrollistview">ListView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrolrecyclerview">RecyclerView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrolscrollview">ScrollView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrolwebview">WebView &amp; Action Bar</string>
    <string name="title_activity_flexiblespacetoolbarscrollview">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagewithviewpagertab">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagewithviewpagertab2">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagegridview">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagescrollview">Flexible Space</string>
    <string name="title_activity_fillgap3listview">Another implementation of Fill Gap &amp; ListView</string>
    <string name="title_activity_fillgap3recyclerview">Another implementation of Fill Gap &amp; RecyclerView</string>
    <string name="title_activity_fillgap3scrollview">Another implementation of Fill Gap &amp; ScrollView</string>
    <string name="title_activity_fillgaplistview">Fill Gap &amp; ListView</string>
    <string name="title_activity_fillgaprecyclerview">Fill Gap &amp; RecyclerView</string>
    <string name="title_activity_fillgapscrollview">Fill Gap &amp; ScrollView</string>
    <string name="title_activity_flexiblespacewithimageRecyclerview">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagelistview">Flexible Space</string>
    <string name="title_activity_flexiblespacewithwebview">Flexible Space</string>
    <string name="title_activity_fragmentactionbarcontrollistview">ListView on Fragment &amp; Action Bar</string>
    <string name="title_activity_fragmenttransition">ActionBar &amp; Toolbar manipulation with Fragment</string>
    <string name="title_activity_handletouchgridview">Handling touch with GridView</string>
    <string name="title_activity_handletouchlistview">Handling touch with ListView</string>
    <string name="title_activity_handletouchrecyclerview">Handling touch with RecyclerView</string>
    <string name="title_activity_handletouchscrollview">Handling touch with ScrollView</string>
    <string name="title_activity_handletouchwebview">Handling touch with WebView</string>
    <string name="title_activity_parallaxtoolbargridview">Parallax gridView &amp; toolbar</string>
    <string name="title_activity_parallaxtoolbarlistview">Parallax listView &amp; toolbar</string>
    <string name="title_activity_parallaxtoolbarscrollview">Parallax scrollView &amp; toolbar</string>
    <string name="title_activity_scrollfrombottomlistview">ListView, scrolling from bottom</string>
    <string name="title_activity_scrollfrombottomrecyclerview">RecyclerView, scrolling from bottom</string>
    <string name="title_activity_slidingupgridview">Sliding up effect with GridView</string>
    <string name="title_activity_slidinguplistview">Sliding up effect with ListView</string>
    <string name="title_activity_slidinguprecyclerview">Sliding up effect with RecyclerView</string>
    <string name="title_activity_slidingupscrollview">Sliding up effect with ScrollView</string>
    <string name="title_activity_slidingupwebview">Sliding up effect with WebView</string>
    <string name="title_activity_stickyheaderlistview">ListView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_stickyheaderrecyclerview">RecyclerView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_stickyheaderscrollview">ScrollView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_stickyheaderwebview">WebView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_toolbarcontrolgridview">GridView &amp; Toolbar</string>
    <string name="title_activity_toolbarcontrollistview">ListView &amp; Toolbar</string>
    <string name="title_activity_toolbarcontrolrecyclerview">RecyclerView &amp; Toolbar</string>
    <string name="title_activity_toolbarcontrolscrollview">ScrollView &amp; Toolbar</string>
    <string name="title_activity_toolbarcontrolwebview">WebView &amp; Toolbar</string>
    <string name="title_activity_viewpagertabfragment">ViewPager &amp; Tab on Fragment</string>
    <string name="title_activity_viewpagertab2">Another implementation of ViewPagerTabActivity</string>
    <string name="title_activity_viewpagertab">ViewPager &amp; Tab &amp; Different fragments</string>
    <string name="title_activity_viewpagertablistview">ViewPager &amp; Tab &amp; ListView</string>
    <string name="title_activity_viewpagertabscrollview">ViewPager &amp; Tab &amp; ScrollView</string>
    <string name="title_activity_viewpagertabscrollviewwithfab">ViewPager &amp; Tab &amp; ScrollView &amp; FAB</string>
</resources>